@@ -49,6 +49,40 @@ name|FilterDirectoryReader
 extends|extends
 name|DirectoryReader
 block|{
+comment|/** Get the wrapped instance by<code>reader</code> as long as this reader is    *  an instance of {@link FilterDirectoryReader}.  */
+DECL|method|unwrap
+specifier|public
+specifier|static
+name|DirectoryReader
+name|unwrap
+parameter_list|(
+name|DirectoryReader
+name|reader
+parameter_list|)
+block|{
+while|while
+condition|(
+name|reader
+operator|instanceof
+name|FilterDirectoryReader
+condition|)
+block|{
+name|reader
+operator|=
+operator|(
+operator|(
+name|FilterDirectoryReader
+operator|)
+name|reader
+operator|)
+operator|.
+name|in
+expr_stmt|;
+block|}
+return|return
+name|reader
+return|;
+block|}
 comment|/**    * Factory class passed to FilterDirectoryReader constructor that allows    * subclasses to wrap the filtered DirectoryReader's subreaders.  You    * can use this to, e.g., wrap the subreaders with specialised    * FilterLeafReader implementations.    */
 DECL|class|SubReaderWrapper
 specifier|public
@@ -361,6 +395,17 @@ operator|.
 name|doClose
 argument_list|()
 expr_stmt|;
+block|}
+comment|/** Returns the wrapped {@link DirectoryReader}. */
+DECL|method|getDelegate
+specifier|public
+name|DirectoryReader
+name|getDelegate
+parameter_list|()
+block|{
+return|return
+name|in
+return|;
 block|}
 block|}
 end_class
