@@ -48,6 +48,40 @@ name|FilterDirectory
 extends|extends
 name|Directory
 block|{
+comment|/** Get the wrapped instance by<code>dir</code> as long as this reader is    *  an instance of {@link FilterDirectory}.  */
+DECL|method|unwrap
+specifier|public
+specifier|static
+name|Directory
+name|unwrap
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|)
+block|{
+while|while
+condition|(
+name|dir
+operator|instanceof
+name|FilterDirectory
+condition|)
+block|{
+name|dir
+operator|=
+operator|(
+operator|(
+name|FilterDirectory
+operator|)
+name|dir
+operator|)
+operator|.
+name|in
+expr_stmt|;
+block|}
+return|return
+name|dir
+return|;
+block|}
 DECL|field|in
 specifier|protected
 specifier|final
