@@ -1092,6 +1092,112 @@ name|class
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testUnwrap
+specifier|public
+name|void
+name|testUnwrap
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|w
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|)
+decl_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|DirectoryReader
+name|dr
+init|=
+name|w
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|LeafReader
+name|r
+init|=
+name|dr
+operator|.
+name|leaves
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|reader
+argument_list|()
+decl_stmt|;
+name|FilterLeafReader
+name|r2
+init|=
+operator|new
+name|FilterLeafReader
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|r
+argument_list|,
+name|r2
+operator|.
+name|getDelegate
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|r
+argument_list|,
+name|FilterLeafReader
+operator|.
+name|unwrap
+argument_list|(
+name|r2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dr
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
