@@ -2486,12 +2486,27 @@ name|LeafReader
 name|reader
 parameter_list|)
 block|{
-return|return
+name|FilterLeafReader
+name|wrapped
+init|=
 operator|new
 name|MyFilterLeafReader
 argument_list|(
 name|reader
 argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|reader
+argument_list|,
+name|wrapped
+operator|.
+name|getDelegate
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+name|wrapped
 return|;
 block|}
 block|}
@@ -2546,17 +2561,44 @@ name|dir
 argument_list|)
 decl_stmt|;
 name|DirectoryReader
+name|nrtReader
+init|=
+name|w
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|FilterDirectoryReader
 name|reader
 init|=
 operator|new
 name|MyFilterDirectoryReader
 argument_list|(
-name|w
-operator|.
-name|getReader
-argument_list|()
+name|nrtReader
 argument_list|)
 decl_stmt|;
+name|assertEquals
+argument_list|(
+name|nrtReader
+argument_list|,
+name|reader
+operator|.
+name|getDelegate
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|nrtReader
+argument_list|,
+name|FilterDirectoryReader
+operator|.
+name|unwrap
+argument_list|(
+name|reader
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|SearcherManager
 name|mgr
 init|=
