@@ -20,6 +20,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|lang
 operator|.
 name|reflect
@@ -201,6 +211,62 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+DECL|method|testUnwrap
+specifier|public
+name|void
+name|testUnwrap
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|FSDirectory
+operator|.
+name|open
+argument_list|(
+name|createTempDir
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|FilterDirectory
+name|dir2
+init|=
+operator|new
+name|FilterDirectory
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|dir
+argument_list|,
+name|dir2
+operator|.
+name|getDelegate
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|dir
+argument_list|,
+name|FilterDirectory
+operator|.
+name|unwrap
+argument_list|(
+name|dir2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dir2
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
